[gd_scene load_steps=2 format=3 uid="uid://bya00buvb0pdk"]

[ext_resource type="Script" path="res://Scenes/MenuOptions.gd" id="1_sfs8o"]

[node name="PauseOptions" type="CanvasLayer"]
script = ExtResource("1_sfs8o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="back" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Back to Game
"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="save" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="load" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="CheckButton" type="CheckButton" parent="Control/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Sound Fx"

[connection signal="pressed" from="Control/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/save" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/load" to="." method="_on_button_2_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
